Missing include in gcArguments.cpp breaks minimal JVM build

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 10
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • gc
    • b34
    • generic
    • generic

      can't build the MinimalVM in JPRT because the UNSUPPORTED_OPTION macro is only locally defined in arguments.cpp, but is now used in gcArguments.cpp:

      /opt/jprt/T/P1/003543.daholme/s/open/src/hotspot/share/gc/shared/gcArguments.cpp:77:29: error: 'UNSUPPORTED_OPTION' was not declared in this scope
         UNSUPPORTED_OPTION(UseG1GC);
                                   ^
      make[3]: *** [/opt/jprt/T/P1/003543.daholme/s/build/linux-x86-debug/hotspot/variant-minimal/libjvm/objs/gcArguments.o] Error 1

            Assignee:
            Roman Kennke
            Reporter:
            Roman Kennke
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: