8191562: Missing include in gcArguments.cpp breaks minimal JVM build

Reviewed-by: mdoerr, ehelin